# syzygy

./: .gitattributes  .gitignore  .travis.yml  Bundle.toml  Cargo.toml  README.md  build.rs  index.html  rustfmt.toml
ahi/: Cargo.toml  README.md
ahi/src/: lib.rs
data/backgrounds/: a_light_in_the_attic.bg  autofac_tour.bg  black_and_blue.bg  black_and_blue_1.bg  column_as_icy_em.bg  column_as_icy_em_1.bg  connect_the_dots.bg  cross_sauce.bg  cross_the_line.bg  cube_tangle.bg  disconnected.bg  double_cross.bg  fact_or_fiction.bg  finale_pit.bg  finale_pit_2.bg  finale_pit_3.bg  finale_pit_4.bg  finale_pit_5.bg  finale_pit_6.bg  finale_pit_7.bg  finale_pit_8.bg  hex_spangled.bg  ice_to_meet_you.bg  ice_to_meet_you_1.bg  ice_to_meet_you_2.bg  jog_your_memory.bg  level_headed.bg  level_up.bg  light_syrup.bg  log_level.bg  map.bg  memory_lane.bg  missed_connections.bg  password_file.bg  plane_and_simple.bg  plane_as_day.bg  point_of_no_return.bg  point_of_order.bg  point_of_view.bg  prolog_bridge.bg  (+21 more)
data/fonts/: block.ahf  danger.ahf  debug.ahf  evil.ahf  good.ahf  italic.ahf  no_return.ahf  point.ahf  roman.ahf  system.ahf  tiny.ahf  title1.ahf  title2.ahf
data/linux/: syzygy.desktop
data/osx/: entitlements.plist
data/sprites/: blinkenlights.ahi  chars.ahi  fullscreen.ahi  halo.ahi  hud_buttons.ahi  screen_fade.ahi
data/sprites/chars/: argony.ahi  boom.ahi  elinsa.ahi  fire.ahi  invis.ahi  mezure.ahi  relyng.ahi  shower.ahi  spikes.ahi  srb.ahi  srbdmg.ahi  system.ahi  ugrent.ahi  yttris.ahi
data/sprites/cross/: star.ahi
data/sprites/devices/: gates.ahi  gems.ahi  sparks.ahi  walls.ahi
data/sprites/dialog/: box.ahi  button.ahi
data/sprites/factor/: auto.ahi  fiction.ahi  they.ahi
data/sprites/failure/: chips.ahi  possible.ahi
data/sprites/finale/: charge_big.ahi  charge_med.ahi  charge_tiny.ahi  ship_align.ahi  tinyboom.ahi  tinysrb.ahi  xanadu4big.ahi  xanadu4glow.ahi
data/sprites/hex/: hub.ahi  solution.ahi  tokens.ahi  wheels.ahi
data/sprites/hud/: buttons.ahi  namebox.ahi
data/sprites/ice/: objects.ahi  symbols.ahi
data/sprites/light/: color.ahi  spacer.ahi  toggle.ahi
data/sprites/map/: aft.ahi  atlatl.ahi  biodome.ahi  checkpoints.ahi  deck1.ahi  deck2.ahi  deck3.ahi  deck4.ahi  factory.ahi  icebox.ahi  labels.ahi  maineng.ahi  nodes.ahi  power.ahi  secret.ahi  sewer.ahi  yellow.ahi
data/sprites/memory/: jog.ahi  lane.ahi  tiles.ahi
data/sprites/plane/: objects.ahi  pipes.ahi
data/sprites/point/: button.ahi  no_return.ahi  order.ahi  platforms.ahi  tiles.ahi  view.ahi
data/sprites/prolog/: screen1g.ahi  screen1r.ahi  screen2g.ahi  screen2r.ahi  screen3g.ahi  screen3r.ahi  screen4g.ahi  screen4r.ahi  screen5g.ahi  screen5r.ahi  ship.ahi  spawn.ahi  thrust.ahi
data/sprites/shift/: arrows.ahi  platforms.ahi
data/sprites/speech/: comm.ahi  evil.ahi  (+4 more)
download/: index.html
src/: main.rs  mode.rs
src/elements/: column.rs  cross.rs  crossword.rs  dialog.rs  factor.rs  fade.rs  hud.rs  ice.rs  lasers.rs  memory.rs  mod.rs  paragraph.rs  plane.rs  progress.rs  puzzle.rs  shift.rs  stars.rs
src/gui/: action.rs  background.rs  canvas.rs  element.rs  event.rs  font.rs  itersynth.rs  mod.rs  path.rs  path_linux.c  path_mac.m  resources.rs  sound.rs  sprite.rs  window.rs
src/map/: control.rs  mod.rs  view.rs
src/modes/: mod.rs  mode.rs  puzzle.rs
src/puzzles/: mod.rs
src/save/: access.rs  color.rs  column.rs  crossword.rs  data.rs  device.rs  direction.rs  game.rs  ice.rs  location.rs  memory.rs  mod.rs  path.rs  path_mac.m  plane.rs  prefs.rs  pyramid.rs  util.rs
src/title/: control.rs  mod.rs  view.rs
styles/: common.css  download.css
(+241 files in other folders)
