[package]
name = "syzygy"
version = "0.1.0"
authors = ["Matthew D. Steele <mdsteele@alum.mit.edu>"]
license = "GPL-3.0+"
build = "build.rs"

[build-dependencies]
gcc = "0.3"

[dependencies]
getopts = "0.2"
rand = "0.3"
sdl2 = { version = "0.22", features = ["use_mac_framework"] }
toml = { version = "0.2", features = [] }

[dependencies.ahi]
git = "https://github.com/mdsteele/ahi"
rev = "8dfd2b39ba35d77a3260d95d53369c149e875ecf"

[dependencies.itersynth]
git = "https://github.com/mdsteele/itersynth"
rev = "bc1e3ffe726c80e3a931bf9e58f4a98f213c2bf5"
