[package]
name = "syzygy"
version = "0.1.0"
authors = ["Matthew D. Steele <mdsteele@alum.mit.edu>"]
license = "GPL-3.0+"
description = "A narrative meta-puzzle game."
build = "build.rs"

[package.metadata.bundle]
name = "System Syzygy"
identifier = "io.github.mdsteele.syzygy"
resources = ["data"]
copyright = "Copyright 2016 Matthew D. Steele"
long_description = """
System Syzygy is a story and a puzzle game, in the style of Cliff Johnson's
_The Fool's Errand_ and _3 in Three_, and of Andrew Plotkin's _System's
Twilight_.  As you move through the game, solving a variety of different kinds
of puzzles, the game tells the story a piece at a time.  By the end of the
game, all the different puzzles and pieces of the story come together into a
single meta-puzzle.
"""

[dependencies]
app_dirs = "1.1"
getopts = "0.2"
num-integer = "0.1"
rand = "0.4"
toml = "0.4"

[dependencies.ahi]
git = "https://github.com/mdsteele/ahi"
rev = "8dfd2b39ba35d77a3260d95d53369c149e875ecf"

[dependencies.itersynth]
git = "https://github.com/mdsteele/itersynth"
rev = "bc1e3ffe726c80e3a931bf9e58f4a98f213c2bf5"

[dependencies.sdl2]
git = "https://github.com/mdsteele/rust-sdl2"
branch = "hash"
features = ["unsafe_textures", "use_mac_framework"]
