[package]
name = "syzygy"
version = "1.0.1"
authors = ["Matthew D. Steele <mdsteele@alum.mit.edu>"]
license = "GPL-3.0+"
description = "A narrative meta-puzzle game."
homepage = "https://mdsteele.games/syzygy/"
edition = "2018"
build = "build.rs"

[package.metadata.bundle]
name = "System Syzygy"
identifier = "io.github.mdsteele.syzygy"
icon = ["data/icon/*.png"]
resources = [
    "data/backgrounds/*.bg",
    "data/fonts/*.ahf",
    "data/sprites/**/*.ahi",
]
copyright = "Copyright 2016 Matthew D. Steele"
category = "Puzzle Game"
long_description = """
System Syzygy is a story and a puzzle game, in the style of Cliff Johnson's
_The Fool's Errand_ and _3 in Three_, and of Andrew Plotkin's _System's
Twilight_.  As you move through the game, solving a variety of different kinds
of puzzles, the game tells the story a piece at a time.  By the end of the
game, all the different puzzles and pieces of the story come together into a
single meta-puzzle.
"""
deb_depends = ["libsdl2-2.0-0 (>= 2.0.2)"]
osx_frameworks = ["SDL2"]
osx_minimum_system_version = "10.11"

[package.metadata.winres]
LegalCopyright = "Copyright 2016 Matthew D. Steele"
OriginalFilename = "syzygy.exe"
ProductName = "System Syzygy"

[build-dependencies]
gcc = "0.3"
glob = "0.2"
ico = "0.1"
winres = { git = "https://github.com/mdsteele/winres", branch = "escape" }

[dependencies]
ahi = { git = "https://github.com/mdsteele/ahi", tag = "v0.1.0" }
app_dirs = "1.2"
getopts = "0.2"
itersynth = { git = "https://github.com/mdsteele/itersynth", tag = "v0.1.0" }
num-integer = "0.1"
rand = "0.4"
toml = "0.4"

[dependencies.sdl2]
git = "https://github.com/mdsteele/rust-sdl2"
branch = "hash"
features = ["unsafe_textures", "use_mac_framework"]
